--- a/pom.xml
+++ b/pom.xml
@@ -2,107 +2,55 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>net.simpleframework</groupId>
+  <parent>
+    <groupId>net.simpleframework</groupId>
+    <artifactId>simple-projects-pom</artifactId>
+    <version>1.0.0</version>
+  </parent>
   <artifactId>simple-module-workflow-modeler</artifactId>
-  <version>4.0-SNAPSHOT</version>
-  <url>http://simpleframework.net</url>
-    
-  <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-  </properties>
+  <version>${simple.module.workflow.modeler}</version>
 
-  <developers>
-    <developer>
-      <id>ckan77</id>
-      <name>chenkan</name>
-      <email>cknet@126.com</email>
-    </developer>
-  </developers>
-  
-  <dependencies>    
+  <dependencies>
     <dependency>
       <groupId>net.simpleframework</groupId>
       <artifactId>simple-module-workflow-common</artifactId>
-      <version>4.0-SNAPSHOT</version>
+      <version>${simple.module.workflow.common}</version>
     </dependency>
-    
+
     <dependency>
       <groupId>org.tinyjee.jgraphx</groupId>
       <artifactId>jgraphx</artifactId>
-      <version>2.3.0.5</version> 
-    </dependency>
-    
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>4.10</version>
-      <scope>test</scope>
+      <version>2.3.0.5</version>
     </dependency>
   </dependencies>
 
   <build>
-    <resources>
-      <resource>
-        <directory>src\main\java</directory>
-        <excludes>
-          <exclude>**/*.java</exclude>
-        </excludes>
-      </resource>
-    </resources>
-
     <plugins>
-      <!--编译插件 安装指令 source:jar install -U 或执行install.bat -->
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <version>2.3.2</version>
+        <artifactId>maven-assembly-plugin</artifactId>
+        <version>2.3</version>
         <configuration>
-          <encoding>utf-8</encoding>
-          <source>1.6</source>
-          <target>1.6</target>
+          <appendAssemblyId>false</appendAssemblyId>
+          <descriptorRefs>
+            <descriptorRef>jar-with-dependencies</descriptorRef>
+          </descriptorRefs>
+          <archive>
+            <manifest>
+              <mainClass>net.simpleframework.workflow.modeler.Application</mainClass>
+            </manifest>
+          </archive>
         </configuration>
+        <executions>
+          <execution>
+            <id>make-assembly</id>
+            <phase>package</phase>
+            <goals>
+              <goal>assembly</goal>
+            </goals>
+          </execution>
+        </executions>
       </plugin>
-      
-	  <plugin>  
-	    <groupId>org.apache.maven.plugins</groupId>  
-	    <artifactId>maven-assembly-plugin</artifactId>  
-	    <version>2.3</version>  
-	    <configuration>  
-	        <appendAssemblyId>false</appendAssemblyId>  
-	        <descriptorRefs>  
-	            <descriptorRef>jar-with-dependencies</descriptorRef>  
-	        </descriptorRefs>  
-	        <archive>  
-	            <manifest>  
-	                <mainClass>net.simpleframework.workflow.modeler.Application</mainClass>  
-	            </manifest>  
-	        </archive>  
-	    </configuration>  
-	    <executions>  
-	        <execution>  
-	            <id>make-assembly</id>  
-	            <phase>package</phase>  
-	            <goals>  
-	                <goal>assembly</goal>  
-	            </goals>  
-	        </execution>  
-	    </executions>  
-	  </plugin>
-	  
     </plugins>
   </build>
-
-  <distributionManagement>
-    <!-- 发布稳定版本到nexus服务 指令clean source:jar deploy -U 或执行deploy.bat -->
-    <repository>
-      <id>releases</id>
-      <url>http://maven.simpleframework.net/content/repositories/releases</url>
-    </repository>
-
-    <!-- 发布快照版本到nexus服务 指令clean source:jar deploy -U 或执行deploy.bat -->
-    <snapshotRepository>
-      <id>snapshots</id>
-      <url>http://maven.simpleframework.net/content/repositories/snapshots</url>
-    </snapshotRepository>
-  </distributionManagement>
 </project>
